[#268] Address various compilation warnings